@@ -1,0 +1,21 @@
+from PyQt4 import QtCore, QtGui
+
+class Task(QtCore.QThread):
+    messageAdded = QtCore.pyqtSignal(QtCore.QString)
+
+    def __init__(self, mainWindow, parent = None):
+        super(Task, self).__init__(parent)
+        self.mainWindow = mainWindow
+        self.finished.connect(self.postRun)
+
+    def run(self):
+        """
+        The code in this method is run in another thread.
+        """
+        pass
+
+    def postRun(self):
+        """
+        The code in this method is run in GUI thread.
+        """
+        pass
